# echotwin

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  config.example.yaml  pyproject.toml
docs/: LATENCY.md  LATENCY.zh.md  PIPELINE.md  PIPELINE.zh.md  SETUP.md  SETUP.zh.md
prompts/: base_template.en.md  base_template.md
prompts/personas/: _template.md  _template.zh.md  ariana_en.md  ouyang_zh.md
scripts/: bench_latency.py  bench_llm_models.py  demo_hud.py  demo_tts_to_file.py  download_models.sh  gen_guest_lines.py  play_demo.py  spike_sherpa_streaming.py  spike_streaming_asr.py  synthesize_fast_responses.py  verify_organic.py  verify_phase1.py  verify_phase2.py
src/echotwin/: __main__.py  bot.py  config.py  config_watcher.py  logging_setup.py  persona.py  session.py
src/echotwin/audio/: audio_source.py  dave_patch.py  ogg_demux.py  preroll_buffer.py  resampler.py  voice_recv_patch.py
src/echotwin/commands/: owner_dm.py  (+1 more)
tests/fixtures/: addressee_golden.jsonl
tests/harness/: _utils.py  run.py  test_e2e.py  test_layer2_vad.py  test_layer3_asr.py  test_layer4_addressee.py  test_layer5_llm.py  test_layer6_chunker.py  test_layer7_tts.py  test_robustness.py  test_streaming_asr.py
tests/integration/: test_addressee_in_pipeline.py  test_fish_real.py  test_tool_loop.py
tests/perf/: bench_e2e_latency.py  bench_pipeline_latency.py
tests/unit/: test_addressee.py  test_arbiter.py  test_claude_usage.py  test_config.py  test_config_watcher.py  test_config_watcher_reload.py  test_cost_tracker.py  test_cost_wiring.py  test_dave_patch.py  test_dave_stats_line.py  test_fast_response_cache.py  test_filler.py  test_finalize_utterance.py  test_fish_protocol_error.py  test_get_date.py  test_get_time.py  test_get_weather.py  test_groq_llm.py  test_i18n.py  test_latency_journey.py  test_listen.py  test_logging_filter.py  test_merge_queue.py  test_ogg_demux.py  test_organic_golden.py  test_organic_hard.py  test_organic_integration.py  test_owner_dm_contexts.py  test_persona.py  test_persona_frontmatter.py  test_persona_language.py  test_preroll_buffer.py  test_quota.py  test_reader_restart.py  test_retry.py  test_sensevoice_parse.py  test_sentence_chunker.py  test_session.py  test_silero_vad.py  test_spawn_finalize.py  (+8 more)
(+42 files in other folders)
