[project]
name = "echotwin"
version = "0.1.0"
description = "Realtime Discord voice companion speaking in a cloned voice (Fish Audio + Claude + local streaming ASR)"
requires-python = ">=3.11"
dependencies = [
    # discord.py / voice-recv / davey are pinned EXACTLY: dave_patch.py and
    # voice_recv_patch.py monkey-patch their internals, so any silent upgrade
    # can break audio decryption. Verify the patches before bumping these.
    "discord.py==2.7.1",
    "discord-ext-voice-recv==0.5.2a179",
    "davey==0.1.5",
    "websockets>=13.0",
    "msgpack>=1.1.0",
    "anthropic>=0.40.0",
    "funasr>=1.0.0",
    # funasr imports torch/torchaudio/librosa lazily at model-load time —
    # they are hard runtime requirements for the SenseVoice batch ASR path
    # even though funasr's own metadata doesn't declare them.
    "torch>=2.0",
    "torchaudio>=2.0",
    "librosa>=0.10",
    "onnxruntime>=1.17.0",
    # Streaming ASR: funasr paraformer online is unusable on M-series CPU (RTF≈1.5);
    # sherpa zipformer int8 measures ~15ms/chunk (scripts/spike_*.py)
    # Pinned EXACTLY: 1.13.4 is broken on macOS arm64 — decode emits empty or
    # nondeterministic garbage ("吒厢吒厢…") on clean audio. Verified 2026-07-11
    # with raw-API repro on the bilingual zipformer; 1.13.2 decodes correctly.
    # Re-verify with tests/harness/test_streaming_asr.py before bumping.
    "sherpa-onnx==1.13.2",
    "huggingface-hub>=1.0",
    "opuslib-next>=1.1.0",
    "soxr>=0.5.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "aiosqlite>=0.20.0",
    "aiohttp>=3.10.0",
    "prometheus-client>=0.20.0",
    "python-dotenv>=1.0.0",
    "python-frontmatter>=1.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-mock>=3.14"]

[project.scripts]
echotwin = "echotwin.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: hits real paid APIs (Anthropic/Fish Audio); excluded by default, run with -m live",
]
addopts = "-m 'not live'"
